# enigma2

./: configure.ac  mytest.py
data/: menu.xml
lib/python/: Makefile.am  enigma_python.i
lib/python/Components/: UsageConfig.py
lib/python/Components/Converter/: Makefile.am
lib/python/DB/: dbpBluePanel.py  nemesisSetting.py~
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/SystemPlugins/: Makefile.am
lib/python/Plugins/SystemPlugins/Fancontrol/: Makefile  Makefile.in
lib/python/Plugins/SystemPlugins/Fancontrol/meta/: Makefile  Makefile.in
lib/python/Screens/: InfoBar.py  InfoBarGenerics.py
main/: Makefile.am  enigma.cpp  nemtool.cpp
po/: Makefile.am
